packages/lang/test/__golden__/config-errors/require-env-trailing-comma-continuation.txt
error[TF010]: expected a variable name, found end of line
 --> tflw.config:4:35
  |
4 | require env ADMIN_EMAIL, ADMIN_PW,
  |                                   ^
  |
  = help: expected a name

error[TF022]: expected `defaults`, `env`, `session`, or `require`, found indentation
 --> tflw.config:5:3
  |
5 |   USER_A_EMAIL, USER_A_PW
  |   ^

error[TF022]: expected `defaults`, `env`, `session`, or `require`, found a dedent
 --> tflw.config:7:1
  |
7 | env staging
  | ^
